// Schéma relationnel - Plateforme de gestion d'annonces
// Pour dbdiagram.io (DBML)

Table users {
  id int [pk, increment]
  email varchar(255) [unique, not null]
  password varchar(255) [not null]
  nom varchar(100) [not null]
  prenom varchar(100) [not null]
  telephone varchar(20)
  role varchar(50) [not null, default: 'annonceur', note: 'annonceur, administrateur, acheteur']
  date_creation timestamp [default: `CURRENT_TIMESTAMP`]
  date_modification timestamp [default: `CURRENT_TIMESTAMP`]
  actif boolean [default: true]
  
  indexes {
    email
    role
  }
  
  note: 'Gère les différents types d utilisateurs : annonceurs, administrateurs, acheteurs'
}

Table categories {
  id int [pk, increment]
  nom varchar(100) [not null]
  description text
  slug varchar(100) [unique, not null]
  date_creation timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    slug
  }
  
  note: 'Permet de classifier les annonces par thématique'
}

Table annonces {
  id int [pk, increment]
  titre varchar(255) [not null]
  description text [not null]
  prix decimal(10,2) [not null]
  user_id int [not null, ref: > users.id]
  categorie_id int [not null, ref: > categories.id]
  statut varchar(50) [not null, default: 'en-attente', note: 'visible, non-visible, en-attente, archivee']
  date_creation timestamp [default: `CURRENT_TIMESTAMP`]
  date_modification timestamp [default: `CURRENT_TIMESTAMP`]
  date_publication timestamp
  nombre_vues int [default: 0]
  
  indexes {
    user_id
    categorie_id
    statut
    date_publication
    (titre, description) [type: fulltext, name: 'idx_recherche']
  }
  
  note: 'Contient toutes les annonces publiées sur la plateforme'
}

Table commentaires_admin {
  id int [pk, increment]
  annonce_id int [not null, ref: > annonces.id]
  admin_id int [not null, ref: > users.id]
  commentaire text [not null]
  date_creation timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    annonce_id
    admin_id
  }
  
  note: 'Permet aux administrateurs de laisser des commentaires sur les annonces'
}

Table signalements {
  id int [pk, increment]
  annonce_id int [not null, ref: > annonces.id]
  email varchar(255) [not null]
  message text [not null]
  statut varchar(50) [not null, default: 'nouveau', note: 'nouveau, en-cours, traite, rejete']
  date_creation timestamp [default: `CURRENT_TIMESTAMP`]
  date_traitement timestamp
  admin_id int [ref: > users.id]
  reponse text
  
  indexes {
    annonce_id
    statut
    date_creation
  }
  
  note: 'Permet aux utilisateurs de signaler des annonces problématiques'
}

Table images_annonces {
  id int [pk, increment]
  annonce_id int [not null, ref: > annonces.id]
  url varchar(500) [not null]
  ordre int [default: 0]
  date_creation timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    annonce_id
  }
  
  note: 'Table des images d annonces (optionnelle, pour évolution future)'
}

// Relations détaillées

Ref: annonces.user_id > users.id [delete: cascade]
Ref: annonces.categorie_id > categories.id [delete: restrict]
Ref: commentaires_admin.annonce_id > annonces.id [delete: cascade]
Ref: commentaires_admin.admin_id > users.id [delete: cascade]
Ref: signalements.annonce_id > annonces.id [delete: cascade]
Ref: signalements.admin_id > users.id [delete: set null]
Ref: images_annonces.annonce_id > annonces.id [delete: cascade]
